--- a/practice-story.html
+++ b/practice-story.html
@@ -11,7 +11,7 @@
     <h1>Ranking the Spurs starting five</h1>
     <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
     <h3>Jeph Duarte <a href="https://twitter.com/jeph_duarte" target="_blank">@jeph_duarte</a> <span id="Date and time">Aug 5, 2018, 6:00am CDT</span></h3>
-    <img src="spurs.jpg">
+    <img src="spurs.jpg" alt="San Antonio Spurs">
     <p class="credit">Soobum Im / USA TODAY Sports</p>
 
     <p>NBA teams are signing their final roster spots, but the big names have long since shuffled themselves into their new homes. LeBron headed for Tinsel Town, DeMarcus Cousins joined the Evil Empire, Paul George surprised everyone by staying put, and Tony Parker shed the Silver & Black after seventeen seasons. Okay, so Parker’s exit may not rank as high as the other fellas mentioned, but for San Antonio, I’d say it was a big deal.</p>
