--- a/practice-story.html
+++ b/practice-story.html
@@ -10,7 +10,7 @@
     <h4>OPEN THREADS</h4>
     <h1>Ranking the Spurs starting five</h1>
     <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
-    <h3>Jeph Duarte <a href="https://twitter.com/jeph_duarte" target="_blank">@jeph_duarte</a> <span id="Date and time">Aug 5, 2018, 6:00am CDT</span></h3>
+    <p>Jeph Duarte <a href="https://twitter.com/jeph_duarte" target="_blank">@jeph_duarte</a> <span id="Date and time">Aug 5, 2018, 6:00am CDT</span></p>
     <img src="spurs.jpg" alt="San Antonio Spurs">
     <p class="credit">Soobum Im / USA TODAY Sports</p>
 
@@ -18,11 +18,11 @@
 
     <p>For now, Bleacher Report offers a <a href="https://bleacherreport.com/articles/2789035-ranking-every-nba-teams-projected-starting-5-after-free-agency#slide7" target ="blank">ranking the starting five line-ups</a> of all 30 NBA teams as they are predicted to be come opening night:</p>
 
-    <p>
-        <blockquote>
+    <blockquote>
+        <p>
         Granted, not every starting five has been assembled yet, but we’re taking our best guesses on how they’ll look opening night. (That means we aren’t magically healing injured players expected to be unavailable by that point.) We’re also using data from last season to see how the still-together units failed or predict what’s awaiting the new ones.
-        </blockquote>
-    </p>
+        </p>
+    </blockquote>
 
     <p>There should be no surprise that Golden State ranked first. Even without the immediate services of DeMarcus Cousins, the very limited 4 All-Stars +1 line-up is believed to be the biggest threat to any team taking the court.</p>
 
@@ -36,17 +36,15 @@
 
     <p>So, between the Raptors and the Spurs, the rankings are thus:</p>
 
-    <p>
-        <ol start="5">
-            <li>Philadelphia 76ers</li>
-            <li>Utah Jazz</li>
-            <li>Oklahoma City Thunder</li>
-            <li>Los Angeles Lakers</li>
-            <li>Denver Nuggets</li>
-            <li>Minnesota Timberwolves</li>
-            <li>Milwaukee Bucks</li>
-        </ol>
-    </p>
+    <ol start="5">
+        <li>Philadelphia 76ers</li>
+        <li>Utah Jazz</li>
+        <li>Oklahoma City Thunder</li>
+        <li>Los Angeles Lakers</li>
+        <li>Denver Nuggets</li>
+        <li>Minnesota Timberwolves</li>
+        <li>Milwaukee Bucks</li>
+    </ol>
 
     <p>And then there are the Spurs. How’s that for under the radar? Two All-Stars in LaMarcus Aldridge and DeMar DeRozan. And NBA Champion in Pau Gasol. A Second Team All-NBA Defensive point guard Dejounte Murray. And an NBA All-Rookie First Team Rudy Gay. All right, so Gay’s and Gasol’s accolades may have some dust. But Gay has a fire in his belly and his reconnecting with DeRozan is going transform them causing a resurgence to their early 20s game.</p>
 
